tests/NormalTests/paczka1/fuzzy1/32441485.err
Error in line 16: 34pYLF S670 -1,4
Error in line 12: P6j S58 99,5
Error in line 14: YFeIwV06 S828 27,6
Error in line 17: P6j S828 24,9
Error in line 33: YFeIwV06 A759 96,7
Error in line 8: 1RrmO9xdj A759 107,2
